--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Portfolio</title>
+  <title>Portfolio - Front End: Michael Haruo Nakashima</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Front End - Michael Nakashima, uma pequena brincadeira em Angular / Vue." />
+  <meta name="keywords" content="Front End, Portfólio, Portfolio, desenvolvimento, Interface"/>
+
+  <meta property="og:title" content="Front End - Michael Nakashima">
+  <meta property="og:description" content="Front End - Michael Nakashima, uma pequena brincadeira em Angular / Vue.">
+  <meta property="og:image" content="http://mhnakashima.com/screenshot.png">
+  <meta property="og:url" content="http://mhnakashima.com">
+  <meta name="twitter:card" content="http://mhnakashima.com/screenshot.png">
+
   <link rel="icon" type="image/x-icon" href="favicon.png" />
 
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Oswald:300,400,700&display=swap" rel="stylesheet">
